tests/snapshots/bundle_rules@rfc3627_2024_min-SequentUserVisible.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: rfc3627_2024_min
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: EatInner
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
---
real ⊢ p0: T0,  real ⊢ p1: T1
----------------------------- "Constructor"
_ ⊢ [p0, p1]: [T0, T1]

inh ⊢ p0: &T0,  inh ⊢ p1: &T1
----------------------------- "ConstructorRef"
r ⊢ [p0, p1]: &[T0, T1]

inh ⊢ p0: &mut T0,  inh ⊢ p1: &mut T1
------------------------------------- "ConstructorRef"
r ⊢ [p0, p1]: &mut [T0, T1]

inh ⊢ [p0, p1]: &T
------------------ "ConstructorMultiRef"
r ⊢ [p0, p1]: &&T

inh ⊢ [p0, p1]: &T
--------------------- "ConstructorMultiRef"
r ⊢ [p0, p1]: &&mut T

inh ⊢ [p0, p1]: &T
--------------------- "ConstructorMultiRef"
r ⊢ [p0, p1]: &mut &T

inh ⊢ [p0, p1]: &mut T
------------------------- "ConstructorMultiRef"
r ⊢ [p0, p1]: &mut &mut T

real ⊢ p: T
------------- "Deref(EatOuter)"
real ⊢ &p: &T

real ⊢ p: T
--------------------- "Deref(EatOuter)"
real ⊢ &mut p: &mut T

inh ⊢ p: &T
------------- "Deref(EatInner)"
inh ⊢ &p: &&T

inh ⊢ p: &mut T
----------------- "Deref(EatInner)"
inh ⊢ &p: &mut &T

inh ⊢ p: &T
--------------------- "Deref(EatInner)"
inh ⊢ &mut p: &&mut T

inh ⊢ p: &mut T
------------------------- "Deref(EatInner)"
inh ⊢ &mut p: &mut &mut T

r ⊢ ref x: T
--------------- "RefBindingResetBindingMode"
inh ⊢ ref x: &T

r ⊢ ref x: T
------------------- "RefBindingResetBindingMode"
inh ⊢ ref x: &mut T

r ⊢ ref mut x: T
------------------- "RefBindingResetBindingMode"
inh ⊢ ref mut x: &T

r ⊢ ref mut x: T
----------------------- "RefBindingResetBindingMode"
inh ⊢ ref mut x: &mut T

inh ⊢ x: &T
--------------- "BindingBorrow"
real ⊢ ref x: T

inh ⊢ x: &mut T
------------------- "BindingBorrow"
real ⊢ ref mut x: T


-------- "Binding"
r ⊢ x: T


--------------- "Binding"
real ⊢ mut x: T
