tests/snapshots/bundle_rules@stateless_2021-SequentUserVisible.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: stateless_2021
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatBoth
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: ResetBindingMode
---
real ⊢ p0: T0,  real ⊢ p1: T1
----------------------------- "Constructor"
_ ⊢ [p0, p1]: [T0, T1]

inh ⊢ p0: &T0,  inh ⊢ p1: &T1
----------------------------- "ConstructorRef"
r ⊢ [p0, p1]: &[T0, T1]

inh ⊢ p0: &mut T0,  inh ⊢ p1: &mut T1
------------------------------------- "ConstructorRef"
r ⊢ [p0, p1]: &mut [T0, T1]

inh ⊢ [p0, p1]: &T
------------------ "ConstructorMultiRef"
r ⊢ [p0, p1]: &&T

inh ⊢ [p0, p1]: &T
--------------------- "ConstructorMultiRef"
r ⊢ [p0, p1]: &&mut T

inh ⊢ [p0, p1]: &T
--------------------- "ConstructorMultiRef"
r ⊢ [p0, p1]: &mut &T

inh ⊢ [p0, p1]: &mut T
------------------------- "ConstructorMultiRef"
r ⊢ [p0, p1]: &mut &mut T

real ⊢ p: T
------------- "Deref(EatOuter)"
real ⊢ &p: &T

_ ⊢ p: T
---------------------------------- "Deref(EatOuter)"
inh ⊢ &p: &T, T is not a reference

real ⊢ p: T
--------------------- "Deref(EatOuter)"
real ⊢ &mut p: &mut T

_ ⊢ p: T
------------------------------------------ "Deref(EatOuter)"
inh ⊢ &mut p: &mut T, T is not a reference

real ⊢ p: T
------------- "Deref(EatBoth)"
inh ⊢ &p: &&T

real ⊢ p: T
----------------- "Deref(EatBoth)"
inh ⊢ &p: &mut &T

real ⊢ p: T
--------------------- "Deref(EatBoth)"
inh ⊢ &mut p: &&mut T

real ⊢ p: T
------------------------- "Deref(EatBoth)"
inh ⊢ &mut p: &mut &mut T

real ⊢ p: T
----------------- "DerefMutWithShared(EatOuter)"
real ⊢ &p: &mut T

_ ⊢ p: T
-------------------------------------- "DerefMutWithShared(EatOuter)"
inh ⊢ &p: &mut T, T is not a reference

real ⊢ p: T
----------------- "DerefMutWithShared(EatBoth)"
inh ⊢ &p: &&mut T

real ⊢ p: T
--------------------- "DerefMutWithShared(EatBoth)"
inh ⊢ &p: &mut &mut T

r ⊢ ref x: T
--------------- "RefBindingResetBindingMode"
inh ⊢ ref x: &T

r ⊢ ref x: T
------------------- "RefBindingResetBindingMode"
inh ⊢ ref x: &mut T

r ⊢ ref mut x: T
------------------- "RefBindingResetBindingMode"
inh ⊢ ref mut x: &T

r ⊢ ref mut x: T
----------------------- "RefBindingResetBindingMode"
inh ⊢ ref mut x: &mut T

r ⊢ mut x: T
--------------- "MutBindingResetBindingMode"
inh ⊢ mut x: &T

r ⊢ mut x: T
------------------- "MutBindingResetBindingMode"
inh ⊢ mut x: &mut T

inh ⊢ x: &T
--------------- "BindingBorrow"
real ⊢ ref x: T

inh ⊢ x: &mut T
------------------- "BindingBorrow"
real ⊢ ref mut x: T


-------- "Binding"
r ⊢ x: T


--------------- "Binding"
real ⊢ mut x: T
